hphp/hack/test/typecheck/type_structure/type_structure4.php.exp
File "type_structure4.php", line 4, characters 18-33:
Unbound name: `NonExistentClass` (an object type) (Naming[2049])
File "type_structure4.php", line 4, characters 3-16:
The two arguments to `type_structure()` must be:
 - first: `ValidClassname::class` or an object of that class
 - second: a single-quoted string literal containing the name of a type constant of that class
Could not resolve the type constant (Typing[4150])
